<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:fontFamily="@font/noto_regular"
                android:gravity="center"
                android:text="@string/listado_personas"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rlProgress"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar"
        android:background="@android:color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/ivCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="130dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_cloud_black" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivCloud"
            android:fontFamily="@font/noto_regular"
            android:gravity="center"
            android:text="@string/error_network_connect"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:indeterminateDrawable="@drawable/drawable_progress_acent"
            android:visibility="gone" />

        <android.widget.Button
            android:id="@+id/btnReload"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_below="@+id/tvMessage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/select_btn_primary"
            android:fontFamily="@font/noto_regular"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/reload"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnTraerListaVolley"
        android:layout_below="@id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/select_btn_primary"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/traer_lista_volley" />

    <android.widget.Button
        android:id="@+id/btnTraerListaRetrofit"
        android:layout_below="@id/btnTraerListaVolley"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/select_btn_primary"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/traer_lista" />

    <TextView
        android:id="@+id/textView"
        android:layout_below="@id/btnTraerListaRetrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/haga_click_en_el_boton_para_traer_la_data"
        android:gravity="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/textView"
        android:id="@+id/rvUsuarios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingStart="10dp"
        android:visibility="gone"
        android:layout_above="@+id/tv_last_update"
        android:paddingEnd="10dp"
        />

    <TextView
        android:id="@+id/tv_last_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_regular"
        android:text="@string/ultimo_actualizacion"
        android:gravity="center"
        android:visibility="gone"
        android:padding="5dp"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:textColor="#000" />
</RelativeLayout>
